# TCI

./: .gitignore  AGENTS.md  I_O+정의.docx  Must_기능별_전제기능_도출.md  README.md  경쟁+제품+기능+MoSCoW+기반+분류+통합.md  경쟁+제품+조사.docx  경쟁+제품에+대한+정의.docx  공통기능_도출.md  기능+우선+순위+선정.docx  기본기능_도출.md  데이터+수집+및+가공+기능+리스트.docx  서비스+레이어+기능+리스트.docx  입력+데이터+목록.docx  지식+베이스+기능+리스트.docx
.specify/: feature.json  (+2 more)
pilot-git-repo-connection/: .env.example  .env.integration.example  pyproject.toml
pilot-git-repo-connection/alembic/: env.py
pilot-git-repo-connection/alembic/versions/: 001_repository_ingestion_core.py  002_repository_ingestion_webhooks.py  003_repository_event_verified_secret_revision.py  004_gitlab_self_managed_provider_support.py  005_scope_rule_preview_failed_warning.py  006_scope_rule_auto_default_flag.py  007_sync_run_active_trigger_guard.py  008_gitlab_insecure_http_transport.py  009_repository_first_connections.py  010_local_upload_workspace_delete.py
pilot-git-repo-connection/specs/001-git-repo-connection/: delivery-evidence.md  implementation-reference-guide.md
pilot-git-repo-connection/src/tci/: __init__.py  app.py  settings.py
pilot-git-repo-connection/src/tci/api/: __init__.py  operator_auth.py  problem_details.py
pilot-git-repo-connection/src/tci/infrastructure/: __init__.py
pilot-git-repo-connection/src/tci/web/: __init__.py
pilot-git-repo-connection/src/tci/workers/: celery_app.py
pilot-git-repo-connection/tests/support/: local_upload_testkit.py  measure_gitlab_webhook_status_latency.py  measure_us1_first_snapshot.py  measure_webhook_status_latency.py  operator_identification_rehearsal.py  repository_connection_testkit.py  repository_first_connection_testkit.py  run_gitlab_quickstart_validation.py  run_quickstart_validation.py
(+388 files in other folders)
